--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,9 @@
+@import 'tailwindcss/base';
+@import 'tailwindcss/components';
+@import 'tailwindcss/utilities';
+
 @layer base {
   body {
-    @apply font-roboto;
+    font-family: 'Roboto', sans-serif;
   }
 }
-
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
